[gd_scene load_steps=3 format=3 uid="uid://dyf4i77556vy3"]

[ext_resource type="Script" path="res://scripts/Deck_n_hand.gd" id="1_26uc1"]
[ext_resource type="PackedScene" uid="uid://c1y45mwf6sdtq" path="res://scenes/Hand.tscn" id="2_46t5x"]

[node name="DeckNHand" type="Node2D"]
script = ExtResource("1_26uc1")

[node name="Hand" parent="." instance=ExtResource("2_46t5x")]
position = Vector2(480, 1472)

[node name="DebugButtons" type="Node2D" parent="."]

[node name="Button" type="Button" parent="DebugButtons"]
offset_left = 16.0
offset_top = 312.0
offset_right = 101.0
offset_bottom = 343.0
text = "coin"

[node name="Button2" type="Button" parent="DebugButtons"]
offset_left = 16.0
offset_top = 352.0
offset_right = 102.0
offset_bottom = 383.0
text = "zombie"

[node name="Button3" type="Button" parent="DebugButtons"]
offset_left = 16.0
offset_top = 392.0
offset_right = 102.0
offset_bottom = 423.0
text = "bomb"

[node name="Button4" type="Button" parent="DebugButtons"]
offset_left = 16.0
offset_top = 432.0
offset_right = 102.0
offset_bottom = 463.0
text = "shield"

[node name="Button5" type="Button" parent="DebugButtons"]
offset_left = 16.0
offset_top = 472.0
offset_right = 102.0
offset_bottom = 503.0
text = "remove"

[connection signal="card_activated" from="Hand" to="." method="_on_hand_card_activated"]
[connection signal="button_up" from="DebugButtons/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="DebugButtons/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="DebugButtons/Button3" to="." method="_on_button_3_button_up"]
[connection signal="button_up" from="DebugButtons/Button4" to="." method="_on_button_4_button_up"]
[connection signal="button_up" from="DebugButtons/Button5" to="." method="_on_button_5_button_up"]
